Bug #1472 mysql \h output out of order
Submitted: 3 Oct 2003 9:25 Modified: 30 Dec 2003 7:59
Reporter: Paul DuBois Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Command-line Clients Severity:S3 (Non-critical)
Version:4.1.1 OS:Any (Any)
Assigned to: Jani Tolonen CPU Architecture:Any

[3 Oct 2003 9:25] Paul DuBois
Description:
Cosmetic problem.

Output from the mysql help or \h command is not 
properly alphabetized (which is wrong), and it no 
longer properly lines up (which doesn't look good). 
This is a result of the addition of the delimiter
command:

List of all MySQL commands:
Note that all text commands must be first on line and end with ';'
help    (\h)    Display this help.
?       (\?)    Synonym for `help'.
clear   (\c)    Clear command.
connect (\r)    Reconnect to the server. Optional arguments are db and host.
edit    (\e)    Edit command with $EDITOR.
ego     (\G)    Send command to mysql server, display result vertically.
exit    (\q)    Exit mysql. Same as quit.
go      (\g)    Send command to mysql server.
nopager (\n)    Disable pager, print to stdout.
notee   (\t)    Don't write into outfile.
pager   (\P)    Set PAGER [to_pager]. Print the query results via PAGER.
print   (\p)    Print current command.
prompt  (\R)    Change your mysql prompt.
quit    (\q)    Quit mysql.
rehash  (\#)    Rebuild completion hash.
source  (\.)    Execute a SQL script file. Takes a file name as an argument.
status  (\s)    Get status information from the server.
system  (\!)    Execute a system shell command.
tee     (\T)    Set outfile [to_outfile]. Append everything into given outfile.
use     (\u)    Use another database. Takes database name as argument.
delimiter       (\d)    Set query delimiter. 

How to repeat:
Invoke mysql from 4.1.1, issue a \h command

Suggested fix:
Mess with mysql.cc, I guess.
[30 Dec 2003 7:59] Jani Tolonen
Fixed.

Regards,
Jani