Fixed Bug#1472,  mysql \h output out of order.